--- a/gerencia_exame_app/templates/base.html
+++ b/gerencia_exame_app/templates/base.html
@@ -12,7 +12,6 @@
 </head>
 <body>
 
-    <!-- INICIO: Bloco do Bootstrap a ser incluido -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/">Gerenciador de Exames</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,11 +22,10 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown05">
-                        <a class="dropdown-item" href="#">Clientes</a>
-                        <a class="dropdown-item" href="#">Pedidos</a>
-                        <a class="dropdown-item" href="#">Produtos</a>
-                        <a class="dropdown-item" href="#">Categorias</a>
-                        <a class="dropdown-item" href="#">Redes Sociais</a>
+                        <a class="dropdown-item" href="#">Pacientes</a>
+                        <a class="dropdown-item" href="#">Agendamento</a>
+                        <a class="dropdown-item" href="#">Exames</a>
+                        <a class="dropdown-item" href="{% url 'specialties:list_specialties' %}">Especialidades</a>
                     </div>
                 </li>
             </ul>
@@ -47,8 +45,7 @@
                 </ul>
         </div>
     </nav>
-    <!-- FIM: Bloco do Bootstrap a ser incluido -->
-
+    
     {% block body %}
     
     {% endblock body %}
