--- a/gerencia_exame_app/templates/specialties/list_specialties.html
+++ b/gerencia_exame_app/templates/specialties/list_specialties.html
@@ -39,10 +39,11 @@
                             <td>
                                 <a href="{% url 'specialties:delete_specialty' specialty.id %}" class="btn btn-danger btn-sm ">Excluir</a>
                             </td>
-                        </tr> 
+                        </tr>                         
                     {% endfor %}
                 </tbody>
                 </table>
+                <a class="btn btn-primary" href="{% url 'core:home' %}">Voltar</a>
             </div>
         </div>
     </div>
