Implementação do app Exames

--- a/gerencia_exame_app/templates/base.html
+++ b/gerencia_exame_app/templates/base.html
@@ -23,9 +23,10 @@
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown05">
                         <a class="dropdown-item" href="#">Pacientes</a>
-                        <a class="dropdown-item" href="#">Agendamento</a>
-                        <a class="dropdown-item" href="#">Exames</a>
-                        <a class="dropdown-item" href="{% url 'specialties:list_specialties' %}">Especialidades</a>
+                        <a class="dropdown-item" href="#">Agendamentos</a>
+                        <a class="dropdown-item" href="#">Resultados</a>                        
+                        <a class="dropdown-item" href="{% url 'exams:list_exams' %}">Exames</a>
+                        <a class="dropdown-item" href="{% url 'specialties:list_specialties' %}">Especialidades</a>                        
                     </div>
                 </li>
             </ul>
